add security to make public